Closed Bug 453720 Opened 16 years ago Closed 16 years ago

Caps should assert when scripts do not contain principals

Categories

(Core :: Security: CAPS, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bent.mozilla, Assigned: bent.mozilla)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
Right now caps throws a silent unkillable exception because we don't expect to ever deal with a script without a principal. That's fine, but it should assert!

Attached patch has r+sr=mrbkap.
Attachment #336927 - Flags: superreview+
Attachment #336927 - Flags: review+
Pushed changeset 27e0838af137 to mozilla-central.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Depends on: 477325
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: