Bug 453720 - "Caps should assert when scripts do not contain principals". r+sr=mrbkap.